--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -47,7 +47,7 @@
                                             <i class="material-icons right">lock_outline</i>
                                         </button>
                                     }
-                                    <input type="hidden" name="categoryId" value="@s.Id" />
+                                    <input type="hidden" name="subcategoryId" value="@s.Id" />
 
                                 </form>
 
