--- a/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
+++ b/KingPIM/KingPIM.Web/Views/Subcategory/Index.cshtml
@@ -101,285 +101,15 @@
     </div>
 
     @*Create subcategory modal*@
-    <div id="createSubcategoryModal" class="modal">
-
-        @*Create subcategory form*@
-        <form asp-action="CreateSubcategory" asp-controller="Subcategory" method="post" class="col s12">
-
-            <div class="modal-content">
-                <h4 class="center">Create new subcategory</h4>
-                <div class="row">
-
-                    @*Choose category*@
-                    <div class="input-field col s6">
-                        <select asp-for="CategoryId" class="categoryselect" required>
-                            <option disabled selected>Choose category</option>
-                            @foreach (var c in Model.Categories)
-                            {
-                                <option value="@c.Id">@c.Name</option>
-                            }
-                        </select>
-                        <span class="helper-text" data-error="Please enter a valid category"></span>
-                    </div>
-
-                    @*Choose subcategory name*@
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">library_books</i>
-                        <input asp-for="Name" id="icon_library_books" type="text" class="validate" required>
-                        <label asp-for="Name" for="icon_library_books">Subcategory name</label>
-                        <span class="helper-text" data-error="Please enter a subcategory name"></span>
-                    </div>
-
-                </div>
-                @if (Model.AttributeGroups != null)
-                {
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <select id="attribute-select">
-                                <option disabled selected>Choose attributegroups</option>
-                                @foreach (var a in Model.AttributeGroups)
-                                {
-                                    <option value="@a.Name%@a.Description">@a.Name</option>
-                                }
-                            </select>
-                            <label>Choose your attributegroups</label>
-                        </div>
-                        @*The attributes will end up here*@
-                        <div class="row col s6">
-
-                            <input asp-for="AttributeGroupName" id="attribute-container-input" type="hidden" value="" />
-                            <div id="sub-attribute-container" class="col s12">
-
-                            </div>
-                        </div>
-                    </div>
-                }
-
-                <div class="row">
-                    <div class="col s6">
-                        <a href="#createAttributeModal" class="createAttribute btn waves-effect small modal-trigger">
-                            Create new attribute
-                            <i class="material-icons right">playlist_add</i>
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                <a class="modal-close waves-effect btn grey">
-                    cancel
-                    <i class="material-icons right">cancel</i>
-                </a>
-                <button id="createSubcategorySubmit" class="waves-effect btn green" type="submit">
-                    Create
-                    <i class="material-icons right">library_add</i>
-                </button>
-            </div>
-
-        </form>
-    </div>
+    <partial name="CreateModal" />
 
     @*Delete subcategory modal*@
-    <div id="deleteSubcategoryModal" class="modal">
-        <div class="modal-content">
-            <h4 class="center">This will remove all the products that are linked to this subcategory!</h4>
-            <div class="row">
-                <h5 class="center">Are you sure you want to delete all of them?</h5>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <div class="row">
-                <div class="right">
-
-                    <form>
-                        <a class="modal-close waves-effect btn grey col">
-                            No, cancel
-                            <i class="material-icons right">cancel</i>
-                        </a>
-                        <button asp-action="DeleteSubcategory" asp-controller="Subcategory"
-                                class="modal-close btn waves-effect red darken-2 modal-trigger col" type="submit" style="margin-left:1em">
-                            Yes, delete
-                            <i class="material-icons right">delete</i>
-                        </button>
-                        <input class="deleteSubcategoryModalInput" type="hidden" name="subcategoryId" value="" />
-
-                    </form>
-                </div>
-            </div>
-
-        </div>
-    </div>
+    <partial name="DeleteModal" />
 
     @*Edit subcategory modal*@
-    <div id="editSubcategoryModal" class="modal">
-        <form asp-action="UpdateSubcategory" asp-controller="Subcategory">
-            <div class="modal-content">
-                <h4 class="center">Edit Subcategory</h4>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <select asp-for="CategoryId" class="categoryselect">
-                            <option disabled>Choose category</option>
-                            @foreach (var c in Model.Categories)
-                            {
-                                <option value="@c.Id">@c.Name</option>
-                            }
-                        </select>
-                    </div>
-
-                    <div class="input-field col s6">
-                        <i class="material-icons prefix">library_books</i>
-                        <input asp-for="Name" id="edit_library_books" type="text" class="editSubcategoryModalValue validate" value="">
-                        <label asp-for="Name" for="edit_library_books" class="active">Change subcategory name</label>
-                    </div>
-                </div>
-                <div class="row">
-                    
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                <a class="modal-close waves-effect btn grey">
-                    cancel
-                    <i class="material-icons right">cancel</i>
-                </a>
-                <button class="modal-close waves-effect btn green" type="submit">
-                    edit
-                    <i class="material-icons right">edit</i>
-                </button>
-                <input class="editSubcategoryModalInput" type="hidden" name="subcategoryId" value="" />
-            </div>
-        </form>
-    </div>
+    <partial name="EditModal" />
 
     @*Create attributegroup modal*@
-    <div id="createAttributeModal" class="modal">
-
-        <div class="modal-content">
-            <h4 class="center">Create new Attributegroup</h4>
-            <div class="row">
-                <div class="col s6">
-                    <div class="row">
-                        <div class="input-field col s8">
-                            <i class="material-icons prefix">library_books</i>
-                            <input asp-for="AttributeName" id="create-attribute-name" type="text" class="validate" />
-                            <label asp-for="AttributeName" for="create-attribute-name">Attribute name</label>
-                        </div>
-                        <div class="input-field col s4">
-                            <button id="create-attribute-button" class="btn waves-effect">
-                                Add
-                                <i class="material-icons right">send</i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s8">
-                            <div class="input-field pin-top">
-                                <select asp-for="Type" id="attributeType-select" class="attrTypeSelect">
-                                    <option selected disabled>chsose type</option>
-                                    <option value="bool">Yes/no</option>
-                                    <option value="string">Text</option>
-                                    <option value="int">number</option>
-                                    <option value="color">color</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s6">
-                    <div id="attr-group" class="input-field col s12">
-                        <i class="material-icons prefix">add</i>
-                        <input asp-for="AttributeGroupName" id="attribute-group-name" type="text" class="validate" />
-                        <label asp-for="AttributeGroupName" for="attribute-group-name">Name this group of attributes</label>
-                    </div>
-                    @*The chips will end up here*@
-                    <div id="attribute-container" class="col s6">
-
-
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="modal-footer">
-            <div class="right">
-                <a class="modal-close waves-effect btn grey">
-                    Cancel
-                    <i class="material-icons right">cancel</i>
-                </a>
-                <a id="save-attributes" class="modal-close waves-effect btn green">
-                    Save and exit
-                    <i class="material-icons right">playlist_add_check</i>
-                </a>
-            </div>
-        </div>
-    </div>
+    <partial name="CreateAttributeGroupModal" />
 
 </div>
-
-@*Create new attributegroup modal*@
-@*<div id="createAttributeGroupModal" class="modal">
-        <div class="modal-content">
-            <h4 class="center">Create attributegroup</h4>
-            <div class="row">
-                <div class="col s6">
-                    <div class="row">
-                        <div class="input-field col s8">
-                            <i class="material-icons prefix">library_books</i>
-                            <input id="AttrGroup-attribute-name" type="text" class="validate" />
-                            <label for="AttrGroup-attribute-name">Attribute name</label>
-                        </div>
-                        <div class="input-field col s4">
-                            <button id="add-attribute-group" class="btn waves-effect">
-                                Add
-                                <i class="material-icons right">send</i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s8">
-                            <div class="input-field pin-top">
-                                <select id="attributeType-group" class="attrTypeSelect">
-                                    <option selected disabled>chsose type</option>
-                                    <option value="bool">Yes/no</option>
-                                    <option value="string">Text</option>
-                                    <option value="int">Integer number</option>
-                                    <option value="decimal">number with decimal</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="modal-close waves-effect btn grey">
-                        Cancel
-                        <i class="material-icons right">cancel</i>
-                    </a>
-                </div>
-                <div class="col s6">
-                    <form asp-action="">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">android</i>
-                            <input id="AttrGroup-name" type="text" class="validate" />
-                            <label for="AttrGroup-name">Attributegroup name</label>
-                        </div>
-                        <div id="attribute-group-attributes">
-
-                        </div>
-                        <br />
-
-                        <a id="save-attributegroup" class="modal-close waves-effect btn green">
-                            Save and exit
-                            <i class="material-icons right">playlist_add_check</i>
-                        </a>
-                    </form>
-
-
-
-
-                </div>
-
-            </div>
-        </div>
-
-    </div>*@
